+ Linux installer is now bootstrapping (like the Windows installer)